fixed some bugs

--- a/MyBlogApp/MyBlogApp.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/MyBlogApp/MyBlogApp.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -1,20 +1,12 @@
-﻿<header>
-    <link href="C:\Users\koray\.nuget\packages\bootstrap\4.5.3\contentFiles\any\any\wwwroot\css\bootstrap.css" rel="stylesheet" />
-    <link href="C:\Users\koray\.nuget\packages\bootstrap\4.5.3\contentFiles\any\any\wwwroot\css\bootstrap-grid.css" rel="stylesheet" />
-    <link href="C:\Users\koray\.nuget\packages\bootstrap\4.5.3\contentFiles\any\any\wwwroot\css\bootstrap-reboot.css" rel="stylesheet" />
-    <script src="C:\Users\koray\.nuget\packages\bootstrap\4.5.3\contentFiles\any\any\wwwroot\js\bootstrap.js"></script>
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
     <script src="~/js/script.js"></script>
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="~/lib/bootstrap/dist/css/bootstrap-grid.css" rel="stylesheet" />
     <link href="~/lib/bootstrap/dist/css/bootstrap-reboot.css" rel="stylesheet" />
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-</header>
-
-
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
     <title>Admin</title>
 </head>
 <body>
